fixed spacing

--- a/style.css
+++ b/style.css
@@ -203,7 +203,6 @@ body {
   #communities-subtitle {
     float: none;
     transform: translateY(25px);
-    padding: 0% 0% 0% 5%;
   }
 
   .stat span {
